# Bayesian-Inference-for--Decay-Half-Lives

./: .gitignore  MANIFEST.in  Makefile  README.md  full_software_gui_app.spec  pyproject.toml  requirements.txt  run_gui.py
data/: nndc_nudat_data_export.csv
scripts/: check_dependencies.py  compile.ps1  compile.sh  install.ps1  install.sh  run.ps1  run.sh
src/full_software_gui_app/: __init__.py  __main__.py  bateman.py  bayesian_runner.py  labels.py  results.py  server.py
src/full_software_gui_app/assets/: index.html
src/full_software_gui_app/assets/css/: app.css
src/full_software_gui_app/assets/js/: app.js  bateman.js  python_exporter.js
